--- a/dashboard/templates/dashboard/category_form.html
+++ b/dashboard/templates/dashboard/category_form.html
@@ -1,6 +1,8 @@
 ﻿{% extends "dashboard/base.html" %}
 
 {% block title %}Thêm hạng mục | TechOne{% endblock %}
+{% block page_kicker %}Quản lý danh mục{% endblock %}
+{% block page_title %}Thêm hạng mục{% endblock %}
 
 {% block content %}
 <section class="hero">
