--- a/dashboard/templates/dashboard/home.html
+++ b/dashboard/templates/dashboard/home.html
@@ -1,6 +1,8 @@
 ﻿{% extends "dashboard/base.html" %}
 
 {% block title %}Dashboard | TechOne{% endblock %}
+{% block page_kicker %}Tổng quan vận hành{% endblock %}
+{% block page_title %}Bảng điều khiển{% endblock %}
 
 {% block content %}
 <section class="hero">
