--- a/dashboard/templates/dashboard/login.html
+++ b/dashboard/templates/dashboard/login.html
@@ -1,6 +1,8 @@
 ﻿{% extends "dashboard/base.html" %}
 
 {% block title %}Đăng nhập | TechOne{% endblock %}
+{% block page_kicker %}Đăng nhập quản trị{% endblock %}
+{% block page_title %}Xác thực nhân viên{% endblock %}
 
 {% block content %}
 <section class="card auth-card">
