--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -26,8 +26,24 @@
             </form>
             <div class="header-actions">
                 <div class="hotline">1800 2097</div>
-                <a class="mini" href="{% url 'cart' %}">Giỏ hàng ({{ cart.get_total_quantity }})</a>
-                <a class="mini" href="{% url 'dashboard_home' %}">Quản trị</a>
+                <a class="mini mini-cart" href="{% url 'cart' %}">
+                    <span>Giỏ hàng</span>
+                    <span class="mini-cart__icon" aria-hidden="true">
+                        <svg viewBox="0 0 24 24" focusable="false">
+                            <path d="M6 6h15l-1.5 9H7.5L6 6Z" />
+                            <path d="M3 4h2l1 11h13" />
+                            <circle cx="9" cy="20" r="1.6" />
+                            <circle cx="18" cy="20" r="1.6" />
+                        </svg>
+                    </span>
+                    <span class="mini-cart__count">{{ cart.get_total_quantity }}</span>
+                </a>
+                {% if user.is_authenticated %}
+                <span class="mini mini-user">Xin chào, {{ user.first_name|default:user.username }}</span>
+                <a class="mini" href="{% url 'logout' %}">Đăng xuất</a>
+                {% else %}
+                <a class="mini" href="{% url 'login' %}?next={{ request.path }}">Đăng nhập</a>
+                {% endif %}
             </div>
         </div>
         <div class="nav-row">
