--- a/core/templates/core/search.html
+++ b/core/templates/core/search.html
@@ -1,5 +1,7 @@
 ﻿{% extends 'core/base.html' %}
 
+{% load price_filters %}
+
 {% block title %}Tìm kiếm | TechOne{% endblock %}
 
 {% block content %}
@@ -48,9 +50,9 @@
             <div class="product-info">
                 <h3>{{ product.name }}</h3>
                 <div class="price-line">
-                    <span class="price">{{ product.price }} VNĐ</span>
+                    <span class="price">{{ product.price|format_vnd }}</span>
                     {% if product.old_price %}
-                    <span class="price-old">{{ product.old_price }} VNĐ</span>
+                    <span class="price-old">{{ product.old_price|format_vnd }}</span>
                     {% endif %}
                 </div>
                 <div class="product-actions">
